--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>FastType</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon"type="image/x-icon" href="data:image/x-icon;,">
+    <title>Yew App</title>
+  </head>
+  <body>loading...</body>
 </html>
