--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        .red {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
