--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
-    <style>
-        .red {
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<img class="test" src="i.jpg" alt="wall"/>
 </body>
 </html>
